--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSelY6gFgVRwSFzIM8tnWV",
+      "authorship_tag": "ABX9TyOC6du+cWqEtlAuHXNctzGk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A3hXvhcWOGW5",
-        "outputId": "43d9a01a-2c4c-4106-dd5e-237731ea5cf4"
+        "outputId": "37c5485c-22be-41e4-887a-c6e82340dcac"
       },
       "outputs": [
         {
@@ -43,12 +43,91 @@
           "text": [
             "hello, world\n",
             "the number is greater than 2\n",
-            "5 hello world \n"
+            "5 hello world  you can \n",
+            "<class 'int'> <class 'str'>\n",
+            "5 9.0 3\n",
+            "3.10.12 (main, Nov  6 2024, 20:22:13) [GCC 11.4.0]\n",
+            "keerthANA Chellamuthu\n",
+            "orange\n",
+            "apple banana oRANGES\n",
+            "applebananaoRANGES\n",
+            "Python is awesome\n",
+            "Python is fantastic\n",
+            "Python is awesome\n",
+            "Python is fantastic\n",
+            "None\n",
+            "2.0\n",
+            "Lorem ipsum dolor sit amet,\n",
+            "consectetur adipiscing elit,\n",
+            "sed do eiusmod tempor incididunt\n",
+            "ut labore et dolore magna aliqua.\n",
+            "e\n",
+            "b\n",
+            "a\n",
+            "n\n",
+            "a\n",
+            "n\n",
+            "a\n",
+            "13\n",
+            "True\n",
+            "Yes, 'free' is present.\n",
+            "True\n",
+            "llo\n",
+            "Hello\n",
+            "llo, World!\n",
+            "\n",
+            "HELLO, WORLD!\n",
+            "big data\n",
+            "Hello, World!\n",
+            "['H', 'llo, World!']\n",
+            "He22o, Wor2d!\n",
+            "Hello, World!big data\n",
+            "the length is 56\n",
+            "The price is 59 dollars\n",
+            "The price is 59.00 dollars\n",
+            "True\n",
+            "('apple', 'banana', 'mango')\n",
+            "3\n",
+            "['apple', 'banana', 'mango']\n",
+            "<class 'list'>\n",
+            "['c', 'd', 'e']\n",
+            "['a', 'b', 'c']\n",
+            "['a', '2', 'c', 'z', 'd', 'e']\n",
+            "['a', '2', 'c', 'z', 'd', 'e', 'g', 'k', 'l']\n",
+            "('aaple', 'banana', 'orange')\n",
+            "(2, 3, 5, 'aaple', 'banana', 'orange')\n",
+            "2\n",
+            "('aaple', 'banana', 'orange')\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "True\n",
+            "{1, 3, 'banana', 5, 7, 9, 'cherry', 'apple'}\n",
+            "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964}\n",
+            "<class 'dict'>\n",
+            "{'brand': 'bmw', 'electric': False, 'year': 1964, 'colors': ['red', 'white', 'blue'], 'car_type': 'electric'}\n",
+            "dict_items([('brand', 'bmw'), ('electric', False), ('year', 1964), ('colors', ['red', 'white', 'blue']), ('car_type', 'electric')])\n",
+            "dict_values(['bmw', False, 1964, ['red', 'white', 'blue'], 'electric'])\n",
+            "dict_keys(['brand', 'electric', 'year', 'colors', 'car_type'])\n",
+            "None\n",
+            "brand\n",
+            "electric\n",
+            "year\n",
+            "colors\n",
+            "car_type\n",
+            "brand : bmw\n",
+            "electric : False\n",
+            "year : 1964\n",
+            "colors : ['red', 'white', 'blue']\n",
+            "car_type : electric\n",
+            "Tobias\n"
           ]
         }
       ],
       "source": [
+        "from typing_extensions import Literal\n",
         "import os\n",
+        "import sys\n",
         "\n",
         "print(\"hello, world\")\n",
         "\n",
@@ -57,12 +136,470 @@
         "\n",
         "x = 5\n",
         "y = \"hello world \"\n",
-        "print(x , y)\n",
+        "z = 'you can ' # \"aa \" and ' aa' both are same\n",
+        "print(x , y , z )\n",
+        "print (type(x) , type(y)) # to know what type of datatype\n",
+        "\n",
+        "x = int (5) # casting\n",
+        "y = float(9.00)\n",
+        "Z = str(3) # python is case sentitive\n",
+        "\n",
+        "\n",
+        "print (x, y, Z )\n",
+        "\n",
+        "print(sys.version)\n",
+        "\n",
+        "\n",
+        "''' variable shouldn' be start with number and shouldn't have space and its case sentitivce '''\n",
+        "\n",
+        "myFirstName = 'keerthANA' # variables can be camel case\n",
+        "MyLastName = 'Chellamuthu' # variables can be pasal case\n",
+        "\n",
+        "print (myFirstName , MyLastName)\n",
+        "\n",
+        "x = y = z =\"orange\" # canassign one variable to all variables\n",
+        "print (z)\n",
+        "\n",
+        "Fruits =[\"apple\", \"banana\" , \"oRANGES\"] # collections can be triple or list is also called unpack the collections\n",
+        "x, y, z = Fruits\n",
+        "\n",
+        "print(x, y, z)\n",
+        "print(x+y+z)# to print without spaces\n",
+        "\n",
+        "x = \"awesome\" # global variable\n",
+        "\n",
+        "def myfunc():\n",
+        "  print(\"Python is \" + x)\n",
+        "\n",
+        "myfunc()\n",
+        "\n",
+        "x = \"awesome\"\n",
+        "\n",
+        "def myfunc():\n",
+        "  x = \"fantastic\"\n",
+        "  print(\"Python is \" + x) # local variable\n",
+        "\n",
+        "myfunc()\n",
+        "\n",
+        "print(\"Python is \" + x)\n",
+        "\n",
+        "x = \"awesome\"\n",
+        "\n",
+        "def myfunc():\n",
+        "  global x # Global is the keybol to declare the global variable\n",
+        "  x = \"fantastic\"\n",
+        "\n",
+        "myfunc()\n",
+        "\n",
+        "print(\"Python is \" + x)\n",
+        "\n",
+        "# datatypes\n",
+        "\n",
+        "x = \"Hello World\"\t#str\n",
+        "x = 2 #int\n",
+        "x = 20.5\t#float\n",
+        "x = 1j    #\tcomplex\n",
+        "x = [\"apple\", \"banana\", \"cherry\"]  \t#list\n",
+        "x = (\"apple\", \"banana\", \"cherry\")  \t#tuple\n",
+        "x = range(6)\t#range\n",
+        "x = {\"name\" : \"John\", \"age\" : 36}\t#dict\n",
+        "x = {\"apple\", \"banana\", \"cherry\"}\t#set\n",
+        "x = frozenset({\"apple\", \"banana\", \"cherry\"})\t#frozenset\n",
+        "x = True\t#bool\n",
+        "x = b\"Hello\"\t#bytes\n",
+        "x = bytearray(5) #\tbytearray\n",
+        "x = memoryview(bytes(5))\t#memoryview\n",
+        "x = None\t# NoneType\n",
+        "\n",
+        "print(x)\n",
+        "\n",
+        "''' conversion '''\n",
+        "\n",
+        "y=2\n",
+        "x=4.7\n",
+        "z=1j\n",
+        "\n",
+        "a = float(y)\n",
+        "\n",
+        "print(a)\n",
+        "\n",
+        "# Literal\n",
+        "z = int(\"3\") # z will be 3\n",
+        "z = float(\"3\")   # z will be 3.0\n",
+        "w = float(\"4.2\") # w will be 4.2\n",
+        "y = str(2)    # y will be '2'\n",
+        "z = str(3.0)  # z will be '3.0'\n",
+        "\n",
+        "# multiple lines\n",
+        "\n",
+        "a = \"\"\"Lorem ipsum dolor sit amet,\n",
+        "consectetur adipiscing elit,\n",
+        "sed do eiusmod tempor incididunt\n",
+        "ut labore et dolore magna aliqua.\"\"\"\n",
+        "print(a)\n",
+        "\n",
+        "a = \"Hello, World!\" # array of string\n",
+        "print(a[1])\n",
+        "\n",
+        "for x in \"banana\": # looping in string\n",
+        "  print(x)\n",
+        "\n",
+        "a = \"Hello, World!\" # lengh\n",
+        "print(len(a))\n",
+        "\n",
+        "txt = \"The best things in life are free!\" # checkinfg in string\n",
+        "print(\"free\" in txt)\n",
+        "\n",
+        "txt = \"The best things in life are free!\" # if in string\n",
+        "if \"free\" in txt:\n",
+        "  print(\"Yes, 'free' is present.\")\n",
+        "\n",
+        "txt = \"The best things in life are free!\" #char is not in\n",
+        "print(\"expensive\" not in txt)\n",
+        "\n",
+        "b = \"Hello, World!\" # slicing the string\n",
+        "print(b[2:5])\n",
+        "print(b[:5])\n",
+        "print(b[2:])\n",
+        "print(b[-2:-5]) # negetative indexing counts from last\n",
+        "\n",
+        "a = \"Hello, World!\"\n",
+        "b = \"big data\"\n",
+        "print(a.upper())\n",
+        "print(b.lower())\n",
+        "print(a.strip()) # removes whitescapes\n",
+        "print(a.split(\"e\"))\n",
+        "print(a.replace(\"l\" ,\"2\"))\n",
+        "print(a+b)\n",
+        "\n",
+        "length = 56\n",
+        "print(f\"the length is {length}\") # f can be used before format string\n",
+        "\n",
+        "price = 59\n",
+        "txt = (f\"The price is {price} dollars\")\n",
+        "print(txt)\n",
+        "\n",
+        "price = 59\n",
+        "txt = f\"The price is {price:.2f} dollars\" # can add 2 floating decimal with help of format\n",
+        "print( txt)\n",
+        "\n",
+        "x = 200\n",
+        "print(isinstance(x, int)) # isinstance () check the obect has datatype\n",
+        "\n",
+        "x *= 3\t# x= x+3\n",
+        "\n",
+        "thislist = (\"apple\",\"banana\",\"mango\")\n",
+        "print(thislist)\n",
+        "print(len(thislist))\n",
+        "print(list(thislist)) # list() is the constructor\n",
+        "list1 = [\"abc\", 34, True, 40, \"male\"] # contain different type of datatype\n",
+        "print(type(list1))\n",
+        "\n",
+        "'''List is a collection which is ordered and changeable. Allows duplicate members.\n",
+        "Tuple is a collection which is ordered and unchangeable. Allows duplicate members.\n",
+        "Set is a collection which is unordered, unchangeable*, and unindexed. No duplicate members.\n",
+        "Dictionary is a collection which is ordered** and changeable. No duplicate members.'''\n",
+        "\n",
+        "list2 =['a','b','c','d','e'] # list can be indexed\n",
+        "print(list2[2:5])\n",
+        "print(list2[-5:-2])\n",
+        "list2.insert (3 ,\"z\")\n",
+        "list2[1] = \"2\" # list values can be changed nad we can insert usig insert()\n",
+        "print(list2)\n",
+        "\n",
+        "list2.append(\"g\") # to add one item in list\n",
+        "list3 = (\"k\"'l') # to add multiple item in list extend() creating another list and adding to the exiting list\n",
+        "list2.extend(list3)\n",
+        "print(list2)\n",
+        "\n",
+        "list2.remove(\"k\")\n",
+        "list2.pop(1)  # deletes the last item\n",
+        "'''del list3\n",
+        "list2.clear()'''\n",
+        "'''\n",
+        "for i in list3:\n",
+        "  print(i)\n",
+        "\n",
+        " i = 0\n",
+        "while (i<= len(list2)):\n",
+        "  print(i)'''\n",
+        "\n",
+        "tuple1 = ('aaple','banana') # we can only change tuple as list and then we can add or else tuple is immutable\n",
+        "\n",
+        "x = list(tuple1)\n",
+        "x.append( \"orange\")\n",
+        "\n",
+        "tuple1 = tuple(x)\n",
+        "print(tuple1)\n",
+        "\n",
+        "\n",
+        "tuple2 = (2, 3, 5 )\n",
+        "''\n",
+        "z = tuple2 + tuple1 # we can add two tuple\n",
+        "print(z)\n",
+        "''\n",
+        "\n",
+        "(x,y,z) = tuple2 # unpaxkinf tuple (by assigning variable to values in tuple )\n",
+        "print(x)\n",
+        "\n",
+        "s = (tuple1 * 2)\n",
+        "\n",
+        "print(tuple1)\n",
+        "\n",
+        "set1 = {\"apple\", \"banana\", \"cherry\"} # set are in {}\n",
+        "set2 = {1, 5, 7, 9, 3}\n",
+        "set3 = {True, False, False}\n",
+        "\n",
+        "print(\"banana\" in set1)\n",
+        "\n",
+        "for x in set1:   # we can access set using in\n",
+        "  print(\"cherry\" in set1)\n",
+        "\n",
+        "set1.update(set2)\n",
+        "print(set1)\n",
+        "'''\n",
+        "set3 = set1.union(set2) # all in sets\n",
+        "set4 = set1.differnce(set2) # left outer join\n",
+        "set5 = set1 | set2 # union\n",
+        "set6 = set1-set2 # difference\n",
+        "set7 = set1&set2 # intersection\n",
+        "set8 = set1.intersection_update(set2) # symmnetric intersection is oppsite of intersection also presents as ^\n",
+        "print(set3)\n",
+        "'''\n",
+        "\n",
+        "\n",
+        "thisdict = {\n",
+        "  \"brand\": \"Ford\",\n",
+        "  \"model\": \"Mustang\",\n",
+        "  \"year\": 1964\n",
+        "}\n",
+        "print(thisdict) # stores the values in key and values and changable , uniquie\n",
+        "\n",
+        "dict1 = {\n",
+        "  \"brand\": \"Ford\",\n",
+        "  \"electric\": False,\n",
+        "  \"year\": 1964,\n",
+        "  \"colors\": [\"red\", \"white\", \"blue\"]\n",
+        "}\n",
+        "\n",
+        "dict1.update({\"car_type\" :\"electric\"})\n",
+        "print(dict)\n",
+        "\n",
+        "x = dict1.get(\"colour\") # ti display the specific values of the key\n",
+        "y = dict1.keys() # to display all the list ofthe key\n",
+        "z = dict1.values() # to display all the values\n",
+        "w = dict1.items() # to display all keys and its values\n",
+        "\n",
+        "dict1[\"brand\"] = \"bmw\"\n",
+        "\n",
+        "print(dict1)\n",
+        "\n",
+        "print(w)\n",
+        "print(z)\n",
+        "print(y)\n",
+        "print(x)\n",
+        "\n",
+        "\n",
+        "\n",
+        "for w in dict1:\n",
+        "  print(w)\n",
+        "\n",
+        "for y,z in dict1.items(): # to get both keys and vaues we need two variables in loop\n",
+        "  print(y,\":\" ,z)\n",
+        "\n",
+        "myfamily = {  # dict contains another dic is called nested dictionary\n",
+        "  \"child1\" : {\n",
+        "    \"name\" : \"Emil\",\n",
+        "    \"year\" : 2004\n",
+        "  },\n",
+        "  \"child2\" : {\n",
+        "    \"name\" : \"Tobias\",\n",
+        "    \"year\" : 2007\n",
+        "  },\n",
+        "  \"child3\" : {\n",
+        "    \"name\" : \"Linus\",\n",
+        "    \"year\" : 2011\n",
+        "  }\n",
+        "}\n",
+        "print(myfamily[\"child2\"][\"name\"]) # access the values in  nested dictionary\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from ast import Pass\n",
+        "a = 200\n",
+        "b = 33\n",
+        "c = 33\n",
+        "if b > a:\n",
+        "  print(\"b is greater than a\")\n",
+        "elif a == b: # else if is written as elif\n",
+        "  print(\"a and b are equal\")\n",
+        "else:\n",
+        "  print(\"a is greater than b\")\n",
+        "\n",
+        "if (a > b ): print(b) # shorthand\n",
+        "\n",
+        "print(a) if (a < b) else print(\" b is greater than a\") # shorthand\n",
+        "\n",
+        "if (a<b) and (b ==c): # likewise we can use or and not\n",
+        "  pass\n",
+        "\n",
+        "x = 41 # nestedif\n",
+        "if x > 10:\n",
+        "  print(\"Above ten,\")\n",
+        "  if x > 20:\n",
+        "    print(\"and also above 20!\")\n",
+        "  else:\n",
+        "    print(\"but not above 20.\")\n",
+        "\n",
+        "a = 33  # if statement retuens cannot be empty\n",
+        "b = 200\n",
+        "\n",
+        "if b > a:\n",
+        "  pass\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eQHIUj0ZxQPb",
+        "outputId": "9106b3d1-b7ee-4572-f689-28fff41fc4fb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a is greater than b\n",
+            "33\n",
+            " b is greater than a\n",
+            "Above ten,\n",
+            "and also above 20!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "AuH93df7xRBs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i = 0\n",
+        "while i<7: # we can use if statement in while and we can even ise break and contiune in whike loop statement\n",
+        " print(i)\n",
+        " i += 1\n",
+        "\n",
+        "if i==3:\n",
+        "  pass\n",
+        "else:\n",
+        "  print(\"i is greater than  7\")\n",
+        "\n",
+        "\n",
+        "for x in range(6): #range means 0 to 5 # break is used to break the statement and continue is used to jump particular value in system\n",
+        "  if x == 3: continue\n",
+        "  print(x)\n",
+        "else:\n",
+        "  print(\"Finally finished!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pu7sOklD0Es-",
+        "outputId": "9e37b885-89a2-4989-b88a-264598d6556c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "i is greater than  7\n",
+            "0\n",
+            "1\n",
+            "2\n",
+            "4\n",
+            "5\n",
+            "Finally finished!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AvtFpB3HxPIW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ubRioT7KxPrb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "uWwGIAmtxcWF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-J8aZlJFxb0_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
